--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,27 +2,35 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
+  margin: 0 auto;
 }
 .card-category{
-  height: 320px;
-  width: 320px;
-  color: white;
+  height: 240px;
+  width: 100%;
+  color: pink;
   text-align: center;
   background-position: center;
   background-size: cover;
   border-radius: 2px;
 }
+// .card-frame{
+//   padding: 12px;
+//   background-image: url(https://images.unsplash.com/photo-1545873509-33e944ca7655?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3904&q=80);
+//   background-position: center;
+//   background-size: cover;
+//   border-radius: 2px;
+// }
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr ;
   }
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
