--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,31 +12,31 @@
 
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to cocktails_path, class: "navbar-brand" do %>
-    <h2>Cocktail Master</h2>
-  <% end %>
+      <%= link_to cocktails_path, class: "navbar-brand" do %>
+        <h2>Cocktail Master</h2>
+      <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Create Cocktail", new_cocktail_path, class: "nav-link" %>
-      </li>
-      <!-- <li class="nav-item dropdown"> -->
-        <%#= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> -->
-          <%#= link_to "Action", "#", class: "dropdown-item" %>
-        <!-- </div> -->
-      </li>
-    </ul>
-  </div>
-</div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <%= link_to "Create Cocktail", new_cocktail_path, class: "text-white" %>
+          </li>
+          <!-- <li class="nav-item dropdown"> -->
+            <%#= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> -->
+              <%#= link_to "Action", "#", class: "dropdown-item" %>
+            <!-- </div> -->
+          </li>
+        </ul>
+      </div>
+    </div>
     <%= yield %>
-    <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
-    <%= javascript_pack_tag "application" %>
+    <%#= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
+    <%#= javascript_pack_tag "application" %>
   </body>
 </html>
